[gd_scene load_steps=3 format=3 uid="uid://bmfmy4mpps80b"]

[ext_resource type="Script" path="res://camera_2d.gd" id="1_t4au1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inerc"]
size = Vector2(48, 721)

[node name="Camera2D" type="Camera2D"]
position = Vector2(598, 360)
script = ExtResource("1_t4au1")

[node name="left_bound" type="Area2D" parent="."]
process_priority = 6
position = Vector2(-600, 48)
priority = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_bound"]
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_inerc")

[node name="right_bound" type="Area2D" parent="."]
process_priority = 6
position = Vector2(600, 43)
priority = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_bound"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_inerc")

[connection signal="mouse_entered" from="left_bound" to="." method="_on_left_bound_mouse_entered"]
[connection signal="mouse_exited" from="left_bound" to="." method="_on_left_bound_mouse_exited"]
[connection signal="mouse_entered" from="right_bound" to="." method="_on_right_bound_mouse_entered"]
[connection signal="mouse_exited" from="right_bound" to="." method="_on_right_bound_mouse_exited"]
